--- a/RickandMorty/style.css
+++ b/RickandMorty/style.css
@@ -18,7 +18,8 @@ body{
     text-align: center;
     overflow-x: hidden;
 
-}input,button{
+}input{
+    margin:5px;
     font-size: 1.2rem;
     padding:10px 30px;
     background-color: #fff;
@@ -80,14 +81,13 @@ h1{
     background-color: #333;
 
 }ul{
-    
+    display: flex;
+    justify-content: flex-start;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    
-}li{
-    float: left;
+ 
 }
 li a{
 
@@ -97,8 +97,10 @@ li a{
     padding: 14px 16px;
     text-decoration: none;
     
-}
-li input{
-    display:flex;
-    justify-content:flex-end;
+}.more{
+    width: 500px;
+    padding:15px 25px;
+    margin: 0 auto;
+    background-color: grey;
+    border:none;
 }
